# graph-with-md

./: .gitignore  CLAUDE.md  README.md  compare_results.py  pubmedqa_stats.py  pyproject.toml  requirements.txt  research_paper.md  sciq_stats.py
.claude/: settings.local.json
docs/: CONTEXT.md  PAPER_REVISIONS.md  REVIEW.md  task.md
experiments/: hotpot_benchmark.py  narrativeqa_benchmark.py  natural_questions_benchmark.py  pubmedqa_benchmark.py  qasper_benchmark.py  quality_benchmark.py  sciq_benchmark.py
src/: __init__.py  baseline_pipeline.py  pipeline.py
src/ablation/: graph_no_markdown_embedder.py  p3_embedder.py
src/baseline/: embedder.py  generator.py  loader.py
src/components/: __init__.py  embedder.py  evaluator.py  generator.py  graph_builder.py  knowledge_graph.py  loader.py
src/core/: ollama_manager.py
test/: test_mini.py
